$Id: History,v 1.191 2002-06-18 10:49:19 gcosmo Exp $
$Name: not supported by cvs2svn $

-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------

History file for Geant4 configuration scripts.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

18th June 2002  Gabriele Cosmo (config-V04-00-09)
- Added -DG4USE_OSPACE for obsolete systems using ObjectSpace STL.

17th June 2002  Gabriele Cosmo (config-V04-00-08)
- Added flag G4NO_ISO_VECDIST for compilers (SUN-CC, HP-aCC) with non ISO
  call to vector::distance() method.

14th June 2002  Gabriele Cosmo (config-V04-00-07)
- binmake.gmk: added include path to "leading_particle" hadronic module.
  Retagged with correct numbering...

3rd May 2002  Gabriele Cosmo (config-V04-00-06)
- liblist.c: added patch to port code on MacOS-X.
  Defined buffer[BUFSIZE] as "char static".
- Added Darwin-g++.gmk configuration file for MacOS-X systems running
  with GNU g++ compiler.
- Removed SUN-CC4.gmk configuration file, no longer supported.
- Updated description header to system configuration files.

27th March 2002  Gabriele Cosmo (config-V04-00-05)
- binmake.gmk: added include path to new module geometry/biasing.
  Co-works with "geometry-V04-00-01" and "transport-V04-00-00".

26th March 2002  Gabriele Cosmo (config-V04-00-04)
- liblist.c: cancelled changes made in previous tag.
  Restored usage of function 'gets(buffer)', correctly adopted in this case.

14th March 2002  Gabriele Cosmo (config-V04-00-03)