@@ -1,4 +1,4 @@
-$Id: History,v 1.191 2002-06-18 10:49:19 gcosmo Exp $
+$Id: History,v 1.192 2002-06-20 10:54:01 gcosmo Exp $
 $Name: not supported by cvs2svn $
 
 -------------------------------------------------------------------
@@ -17,6 +17,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+20th June 2002  Gabriele Cosmo (config-V04-00-10)
+- Moved STEP PERL scripts to examples/extended/geometry/cad/scripts.
 
 18th June 2002  Gabriele Cosmo (config-V04-00-09)
 - Added -DG4USE_OSPACE for obsolete systems using ObjectSpace STL.
